# MatchTheObject

./: CMakeLists.txt  README.md
MatchTheObject/: CMakeLists.txt
MatchTheObject/include/: ActionMenu.hpp  Form.hpp  GameUI.hpp  Panel.hpp  Sceen.hpp  SceenBuilder.hpp
MatchTheObject/source/: GameActions.cpp  Sceen.cpp  outputfile
Minigame/: Form.hpp  Frames.hpp  Minigame.vcxproj  Minigame.vcxproj.filters  Sceen.hpp  SceenDirector.hpp  Toys.hpp
Minigame/x64/Debug/: Minigame.exe.recipe
Minigame/x64/Debug/Minigame.tlog/: Minigame.lastbuildstate
include/: Action.hpp  ConsoleUI.hpp  Frames.hpp  GameActions.hpp  GameApplication.hpp  Panel.hpp  Player.hpp  Toys.hpp
source/: GameActions.cpp  Sceen.cpp  main.cpp
